커밋3 다른 사칙연산 추가

--- a/Calculator_training.ipynb
+++ b/Calculator_training.ipynb
@@ -10,6 +10,18 @@
     "## 함수선언부\n",
     "def add_func(n1, n2) :\n",
     "    result = n1 + n2\n",
+    "    return result\n",
+    "\n",
+    "def sub_func(n1, n2) :\n",
+    "    result = n1 - n2\n",
+    "    return result\n",
+    "\n",
+    "def sub_func(n1, n2) :\n",
+    "    result = n1 * n2\n",
+    "    return result\n",
+    "\n",
+    "def sub_func(n1, n2) :\n",
+    "    result = n1 / n2\n",
     "    return result"
    ]
   },
@@ -27,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8a2347ad-4e6e-429d-b989-d9df2b86a77f",
    "metadata": {},
    "outputs": [
@@ -42,7 +54,16 @@
    "source": [
     "## 메인 코드부\n",
     "res = add_func(num1, num2)\n",
-    "print(num1, '+', num2, '=', res)"
+    "print(num1, '+', num2, '=', res)\n",
+    "\n",
+    "res = sub_func(num1, num2)\n",
+    "print(num1, '-', num2, '=', res)\n",
+    "\n",
+    "res = sub_func(num1, num2)\n",
+    "print(num1, '*', num2, '=', res)\n",
+    "\n",
+    "res = sub_func(num1, num2)\n",
+    "print(num1, '/', num2, '=', res)"
    ]
   }
  ],
